--- a/ollama_mod_cage/requirements.txt
+++ b/ollama_mod_cage/requirements.txt
@@ -1,233 +1,158 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-absl-py=2.1.0=pypi_0
-aiohttp=3.9.5=pypi_0
-aiosignal=1.3.1=pypi_0
-annotated-types=0.6.0=pypi_0
-anyascii=0.3.2=pypi_0
-anyio=4.3.0=pypi_0
-astunparse=1.6.3=pypi_0
-attrs=23.2.0=pypi_0
-audioread=3.0.1=pypi_0
-babel=2.14.0=pypi_0
-bangla=0.0.2=pypi_0
-blinker=1.7.0=pypi_0
-blis=0.7.11=pypi_0
-bnnumerizer=0.0.2=pypi_0
-bnunicodenormalizer=0.1.6=pypi_0
-boto3=1.34.91=pypi_0
-botocore=1.34.91=pypi_0
-build=1.2.1=pypi_0
-bzip2=1.0.8=h2bbff1b_5
-ca-certificates=2024.3.11=haa95532_0
-cachecontrol=0.14.0=pypi_0
-catalogue=2.0.10=pypi_0
-certifi=2024.2.2=pypi_0
-cffi=1.16.0=pypi_0
-charset-normalizer=3.3.2=pypi_0
-cleo=2.1.0=pypi_0
-click=8.1.7=pypi_0
-cloudpathlib=0.16.0=pypi_0
-colorama=0.4.6=pypi_0
-confection=0.1.4=pypi_0
-contourpy=1.2.1=pypi_0
-coqpit=0.0.17=pypi_0
-crashtest=0.4.1=pypi_0
-cryptography=42.0.7=pypi_0
-customtkinter=5.2.2=pypi_0
-cycler=0.12.1=pypi_0
-cymem=2.0.8=pypi_0
-cython=3.0.10=pypi_0
-darkdetect=0.8.0=pypi_0
-dateparser=1.1.8=pypi_0
-decorator=5.1.1=pypi_0
-deprecated=1.2.14=pypi_0
-diskcache=5.6.3=pypi_0
-distlib=0.3.8=pypi_0
-docopt=0.6.2=pypi_0
-dulwich=0.21.7=pypi_0
-einops=0.7.0=pypi_0
-encodec=0.1.1=pypi_0
-fastjsonschema=2.19.1=pypi_0
-filelock=3.13.4=pypi_0
-flask=3.0.3=pypi_0
-flatbuffers=24.3.25=pypi_0
-fonttools=4.51.0=pypi_0
-frozenlist=1.4.1=pypi_0
-fsspec=2024.3.1=pypi_0
-funcy=2.0=pypi_0
-g2pkk=0.1.2=pypi_0
-gast=0.5.4=pypi_0
-gguf=0.6.0=pypi_0
-gitdb=4.0.11=pypi_0
-gitpython=3.1.43=pypi_0
-google-pasta=0.2.0=pypi_0
-grpcio=1.62.2=pypi_0
-gruut=2.2.3=pypi_0
-gruut-ipa=0.13.0=pypi_0
-gruut-lang-de=2.0.0=pypi_0
-gruut-lang-en=2.0.0=pypi_0
-gruut-lang-es=2.0.0=pypi_0
-gruut-lang-fr=2.0.2=pypi_0
-h11=0.14.0=pypi_0
-h5py=3.11.0=pypi_0
-hangul-romanize=0.1.0=pypi_0
-httpcore=1.0.5=pypi_0
-httpx=0.27.0=pypi_0
-huggingface-hub=0.22.2=pypi_0
-idna=3.7=pypi_0
-importlib-metadata=7.1.0=pypi_0
-inflect=7.2.1=pypi_0
-installer=0.7.0=pypi_0
-intel-openmp=2021.4.0=pypi_0
-itsdangerous=2.2.0=pypi_0
-jamo=0.4.1=pypi_0
-jaraco-classes=3.4.0=pypi_0
-jieba=0.42.1=pypi_0
-jinja2=3.1.3=pypi_0
-jmespath=1.0.1=pypi_0
-joblib=1.4.0=pypi_0
-jsonlines=1.2.0=pypi_0
-keras=3.3.3=pypi_0
-keyboard=0.13.5=pypi_0
-keyring=24.3.1=pypi_0
-kiwisolver=1.4.5=pypi_0
-langcodes=3.3.0=pypi_0
-lazy-loader=0.4=pypi_0
-libclang=18.1.1=pypi_0
-libffi=3.4.4=hd77b12b_0
-librosa=0.10.1=pypi_0
-llama-cpp-python=0.2.75=pypi_0
-llamacpp=0.1.14=pypi_0
-llvmlite=0.42.0=pypi_0
-markdown=3.6=pypi_0
-markdown-it-py=3.0.0=pypi_0
-markupsafe=2.1.5=pypi_0
-matplotlib=3.8.4=pypi_0
-matrix-client=0.4.0=pypi_0
-mdurl=0.1.2=pypi_0
-mkl=2021.4.0=pypi_0
-ml-dtypes=0.3.2=pypi_0
-more-itertools=10.2.0=pypi_0
-mpmath=1.3.0=pypi_0
-msgpack=1.0.8=pypi_0
-multidict=6.0.5=pypi_0
-murmurhash=1.0.10=pypi_0
-mutagen=1.47.0=pypi_0
-namex=0.0.8=pypi_0
-networkx=2.8.8=pypi_0
-nltk=3.8.1=pypi_0
-num2words=0.5.13=pypi_0
-numba=0.59.1=pypi_0
-numpy=1.24.4=pypi_0
-nvidia-pyindex=1.0.9=pypi_0
-ollama=0.2.0=pypi_0
-openssl=3.0.13=h2bbff1b_0
-opt-einsum=3.3.0=pypi_0
-optree=0.11.0=pypi_0
-packaging=24.0=pypi_0
-pandas=1.5.3=pypi_0
-pexpect=4.9.0=pypi_0
-pillow=10.3.0=pypi_0
-pip=23.3.1=py311haa95532_0
-pkginfo=1.10.0=pypi_0
-platformdirs=4.2.1=pypi_0
-poetry=1.8.3=pypi_0
-poetry-core=1.9.0=pypi_0
-poetry-plugin-export=1.7.1=pypi_0
-pooch=1.8.1=pypi_0
-preshed=3.0.9=pypi_0
-protobuf=4.25.3=pypi_0
-psutil=5.9.8=pypi_0
-ptyprocess=0.7.0=pypi_0
-pyaudio=0.2.14=pypi_0
-pycparser=2.22=pypi_0
-pydantic=2.7.1=pypi_0
-pydantic-core=2.18.2=pypi_0
-pygithub=2.3.0=pypi_0
-pygments=2.18.0=pypi_0
-pyjwt=2.8.0=pypi_0
-pynacl=1.5.0=pypi_0
-pynndescent=0.5.12=pypi_0
-pyparsing=3.1.2=pypi_0
-pypinyin=0.51.0=pypi_0
-pyproject-hooks=1.1.0=pypi_0
-pyqt5=5.15.10=pypi_0
-pyqt5-qt5=5.15.2=pypi_0
-pyqt5-sip=12.13.0=pypi_0
-pysbd=0.3.4=pypi_0
-python=3.11.9=he1021f5_0
-python-crfsuite=0.9.10=pypi_0
-python-dateutil=2.9.0.post0=pypi_0
-pytz=2024.1=pypi_0
-pywin32-ctypes=0.2.2=pypi_0
-pyyaml=6.0.1=pypi_0
-rapidfuzz=3.9.0=pypi_0
-regex=2024.4.16=pypi_0
-requests=2.31.0=pypi_0
-requests-toolbelt=1.0.0=pypi_0
-rich=13.7.1=pypi_0
-s3transfer=0.10.1=pypi_0
-safetensors=0.4.3=pypi_0
-scikit-learn=1.4.2=pypi_0
-scipy=1.13.0=pypi_0
-sentencepiece=0.2.0=pypi_0
-setuptools=68.2.2=py311haa95532_0
-shellingham=1.5.4=pypi_0
-six=1.16.0=pypi_0
-smart-open=6.4.0=pypi_0
-smmap=5.0.1=pypi_0
-sniffio=1.3.1=pypi_0
-sounddevice=0.4.6=pypi_0
-soundfile=0.12.1=pypi_0
-soxr=0.3.7=pypi_0
-spacy=3.7.4=pypi_0
-spacy-legacy=3.0.12=pypi_0
-spacy-loggers=1.0.5=pypi_0
-speechrecognition=3.10.3=pypi_0
-sqlite=3.41.2=h2bbff1b_0
-srsly=2.4.8=pypi_0
-sudachidict-core=20240409=pypi_0
-sudachipy=0.6.8=pypi_0
-suno-bark=0.0.1a0=pypi_0
-sympy=1.12=pypi_0
-tbb=2021.12.0=pypi_0
-tensorboard=2.16.2=pypi_0
-tensorboard-data-server=0.7.2=pypi_0
-tensorflow=2.16.1=pypi_0
-tensorflow-intel=2.16.1=pypi_0
-tensorflow-io-gcs-filesystem=0.31.0=pypi_0
-termcolor=2.4.0=pypi_0
-thinc=8.2.3=pypi_0
-threadpoolctl=3.4.0=pypi_0
-tk=8.6.12=h2bbff1b_0
-tokenizers=0.19.1=pypi_0
-tomlkit=0.12.5=pypi_0
-torch=2.2.1=pypi_0
-torchaudio=2.2.1=pypi_0
-tqdm=4.66.2=pypi_0
-trainer=0.0.36=pypi_0
-transformers=4.40.1=pypi_0
-trove-classifiers=2024.4.10=pypi_0
-tts=0.22.0=pypi_0
-typeguard=4.2.1=pypi_0
-typer=0.9.4=pypi_0
-typing-extensions=4.11.0=pypi_0
-tzdata=2024.1=pypi_0
-tzlocal=5.2=pypi_0
-umap-learn=0.5.6=pypi_0
-unidecode=1.3.8=pypi_0
-urllib3=1.26.18=pypi_0
-vc=14.2=h21ff451_1
-virtualenv=20.26.1=pypi_0
-vs2015_runtime=14.27.29016=h5e58377_2
-wasabi=1.1.2=pypi_0
-weasel=0.3.4=pypi_0
-werkzeug=3.0.2=pypi_0
-wheel=0.41.2=py311haa95532_0
-wrapt=1.16.0=pypi_0
-xz=5.4.6=h8cc25b3_0
-yarl=1.9.4=pypi_0
-zipp=3.18.1=pypi_0
-zlib=1.2.13=h8cc25b3_0
+absl-py==2.1.0
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyascii==0.3.2
+anyio==4.3.0
+attrs==23.2.0
+audioread==3.0.1
+Babel==2.15.0
+bangla==0.0.2
+blinker==1.8.2
+blis==0.7.11
+bnnumerizer==0.0.2
+bnunicodenormalizer==0.1.6
+Brotli @ file:///C:/b/abs_3d36mno480/croot/brotli-split_1714483178642/work
+catalogue==2.0.10
+certifi @ file:///C:/b/abs_35d7n66oz9/croot/certifi_1707229248467/work/certifi
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+click==8.1.7
+cloudpathlib==0.16.0
+colorama==0.4.6
+confection==0.1.4
+contourpy==1.2.1
+coqpit==0.0.17
+customtkinter==5.2.2
+cycler==0.12.1
+cymem==2.0.8
+Cython==3.0.10
+darkdetect==0.8.0
+dateparser==1.1.8
+decorator==5.1.1
+docopt==0.6.2
+einops==0.8.0
+encodec==0.1.1
+filelock @ file:///C:/b/abs_f2gie28u58/croot/filelock_1700591233643/work
+Flask==3.0.3
+fonttools==4.51.0
+frozenlist==1.4.1
+fsspec==2024.5.0
+g2pkk==0.1.2
+gmpy2 @ file:///C:/ci_311/gmpy2_1677743390134/work
+grpcio==1.63.0
+gruut==2.2.3
+gruut-ipa==0.13.0
+gruut_lang_de==2.0.0
+gruut_lang_en==2.0.0
+gruut_lang_es==2.0.0
+gruut_lang_fr==2.0.2
+h11==0.14.0
+hangul-romanize==0.1.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.23.0
+idna @ file:///C:/b/abs_aad84bnnw5/croot/idna_1714398896795/work
+inflect==7.2.1
+install==1.3.5
+intel-openmp==2021.4.0
+itsdangerous==2.2.0
+jamo==0.4.1
+jieba==0.42.1
+Jinja2 @ file:///C:/b/abs_f7x5a8op2h/croot/jinja2_1706733672594/work
+joblib==1.4.2
+jsonlines==1.2.0
+keyboard==0.13.5
+kiwisolver==1.4.5
+langcodes==3.4.0
+language_data==1.2.0
+lazy_loader==0.4
+librosa==0.10.2.post1
+llvmlite==0.42.0
+marisa-trie==1.1.1
+Markdown==3.6
+MarkupSafe @ file:///C:/b/abs_ecfdqh67b_/croot/markupsafe_1704206030535/work
+matplotlib==3.9.0
+mkl==2021.4.0
+mkl-fft @ file:///C:/b/abs_19i1y8ykas/croot/mkl_fft_1695058226480/work
+mkl-random @ file:///C:/b/abs_edwkj1_o69/croot/mkl_random_1695059866750/work
+mkl-service==2.4.0
+more-itertools==10.2.0
+mpmath @ file:///C:/b/abs_7833jrbiox/croot/mpmath_1690848321154/work
+msgpack==1.0.8
+multidict==6.0.5
+murmurhash==1.0.10
+networkx==2.8.8
+nltk==3.8.1
+num2words==0.5.13
+numba==0.59.1
+numpy @ file:///C:/b/abs_c1ywpu18ar/croot/numpy_and_numpy_base_1708638681471/work/dist/numpy-1.26.4-cp311-cp311-win_amd64.whl#sha256=5dfd3e04dc1c2826d3f404fdc7f93c097901f5da9b91f4f394f79d4e038ed81d
+nvidia-pyindex==1.0.9
+ollama==0.2.0
+packaging==24.0
+pandas==1.5.3
+pillow @ file:///C:/b/abs_95ls_qh4c2/croot/pillow_1714398870615/work
+platformdirs==4.2.2
+pooch==1.8.1
+preshed==3.0.9
+protobuf==5.26.1
+psutil==5.9.8
+PyAudio==0.2.14
+pycparser==2.22
+pydantic==2.7.1
+pydantic_core==2.18.2
+pynndescent==0.5.12
+pyparsing==3.1.2
+pypinyin==0.51.0
+pysbd==0.3.4
+PySocks @ file:///C:/ci_311/pysocks_1676425991111/work
+python-crfsuite==0.9.10
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML @ file:///C:/b/abs_782o3mbw7z/croot/pyyaml_1698096085010/work
+regex==2024.5.15
+requests @ file:///C:/b/abs_474vaa3x9e/croot/requests_1707355619957/work
+safetensors==0.4.3
+scikit-learn==1.4.2
+scipy==1.13.0
+six==1.16.0
+smart-open==6.4.0
+sniffio==1.3.1
+sounddevice==0.4.6
+soundfile==0.12.1
+soxr==0.3.7
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SpeechRecognition==3.10.4
+srsly==2.4.8
+SudachiDict-core==20240409
+SudachiPy==0.6.8
+sympy @ file:///C:/b/abs_82njkonm7f/croot/sympy_1701397685028/work
+tbb==2021.12.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+thinc==8.2.3
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+torch==2.2.2
+torchaudio==2.2.2
+torchvision==0.17.2
+tqdm==4.66.4
+trainer==0.0.36
+transformers==4.41.0
+TTS==0.22.0
+typeguard==4.2.1
+typer==0.9.4
+typing_extensions @ file:///C:/b/abs_0as9mdbkfl/croot/typing_extensions_1715268906610/work
+tzdata==2024.1
+tzlocal==5.2
+umap-learn==0.5.6
+Unidecode==1.3.8
+urllib3 @ file:///C:/b/abs_8e4z8_gh1l/croot/urllib3_1715636317140/work
+wasabi==1.1.2
+weasel==0.3.4
+Werkzeug==3.0.3
+win-inet-pton @ file:///C:/ci_311/win_inet_pton_1676425458225/work
+yarl==1.9.4
