--- a/ollama_mod_cage/.gitignore
+++ b/ollama_mod_cage/.gitignore
@@ -1,5 +1,5 @@
 !.gitignore
 __pycache__/
 /long_chat_history.json
-/developer_path_library.json
-/developer_switch_board.json
+/developer_custom.json
+/developer_tools.json
