--- a/ollama_mod_cage/requirements.txt
+++ b/ollama_mod_cage/requirements.txt
@@ -102,7 +102,7 @@ nose2==0.15.1
 num2words==0.5.13
 numba==0.59.1
 nvidia-pyindex==1.0.9
-ollama==0.2.1
+ollama==0.3.0
 packaging==24.0
 pandas==1.5.3
 pathspec==0.12.1
@@ -118,69 +118,4 @@ PyAudio==0.2.14
 PyAutoGUI==0.9.54
 pybase64==1.3.2
 pycparser==2.22
-pydantic==2.7.1
-pydantic_core==2.18.2
-PyGetWindow==0.0.9
-pylint==2.10.2
-PyMsgBox==1.0.9
-pynndescent==0.5.12
-pyparsing==3.1.2
-pyperclip==1.8.2
-pypinyin==0.51.0
-PyRect==0.2.0
-pysbd==0.3.4
-PyScreeze==0.1.30
-python-crfsuite==0.9.10
-python-dateutil==2.9.0.post0
-pytweening==1.2.0
-pytz==2024.1
-regex==2024.5.15
-requests==2.32.3
-safetensors==0.4.3
-scikit-learn==1.4.2
-scipy==1.13.0
-sentencepiece==0.2.0
-six==1.16.0
-smart-open==6.4.0
-sniffio==1.3.1
-sounddevice==0.4.6
-soundfile==0.12.1
-soxr==0.3.7
-spacy==3.7.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SpeechRecognition==3.10.4
-spinners==0.0.24
-srsly==2.4.8
-SudachiDict-core==20240409
-SudachiPy==0.6.8
-tbb==2021.12.0
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-termcolor==2.4.0
-thinc==8.2.3
-threadpoolctl==3.5.0
-tokenizers==0.19.1
-toml==0.10.2
-torch==2.2.2
-torchaudio==2.2.2
-torchvision==0.17.2
-tornado==6.4.1
-tqdm==4.66.4
-trainer==0.0.36
-transformers==4.41.0
-typeguard==4.2.1
-typer==0.9.4
-tzdata==2024.1
-tzlocal==5.2
-umap-learn==0.5.6
-Unidecode==1.3.8
-unidic-lite==1.0.8
-wasabi==1.1.2
-weasel==0.3.4
-Werkzeug==3.0.3
-windows-curses==2.3.3
-Wrapper==1.1.0b1
-wrapt==1.12.1
-xxhash==3.4.1
-yarl==1.9.4
+pyd
